=== master

More minor code style updates

Small fix for form in demo app

Small code style updates

=== 1.3.2

Pure render optimization

=== 1.3.1

Performance optimization and support improvements

=== 1.3.0

Add support for inline forms

=== 1.2.0

Add Form#reset method and other improvements

=== 1.1.0

Reduce complexity of code organization, fixes

Add bindState helper method, improve Form props

Fix rendering flaws in Demo forms, add CHANGELOG

=== 1.0.0