@@ -1,7 +1,7 @@
 {
-  presets: [
-    'es2015',
-    'react',
-    'stage-1'
+  "presets": [
+    "es2015",
+    "react",
+    "stage-1"
   ]
 }
