@@ -1,42 +1,8 @@
 import React, { Component } from 'react';
 import Form from '../src/Form';
-import { bindState, updated, buildHandlersCache } from '../src/utils';
+import { bindState, buildHandlersCache } from '../src/utils';
 import { shallow } from 'enzyme';
 import expect from 'expect';
-
-describe('updated', function() {
-  it('carefully sets deeply nested item: deeply nested array', function() {
-    const obj = { foo: { bar: { baz: [1, 2, 3] } }, bak: { big: 1 } };
-    const upd = updated(obj, 'foo.bar.baz.1', 4);
-
-    expect(obj === upd).toBe(false, 'obj should not be updated in place');
-    expect(obj.foo === upd.foo).toBe(false, 'obj.foo should not be updated in place');
-    expect(obj.foo.bar === upd.foo.bar).toBe(false, 'obj.foo.bar should not be updated in place');
-    expect(obj.foo.bar.baz === upd.foo.bar.baz).toBe(false, 'obj.foo.bar.baz should not be updated in place');
-    expect(obj.bak === upd.bak).toBe(true, 'obj.bak should not be cloned');
-    expect(upd.foo.bar.baz).toMatch([1, 4, 3], 'value under desired name should be updated');
-  });
-
-  it('carefully sets deeply nested item: deeply nested object', function() {
-    const obj = { foo: { bar: [{ baz: 'baz1' }, { baz: 'baz2' }] }, bak: { big: 1 } };
-    const upd = updated(obj, 'foo.bar.1.baz', 'baz3');
-
-    expect(obj === upd).toBe(false, 'obj should not be updated in place');
-    expect(obj.foo === upd.foo).toBe(false, 'obj.foo should not be updated in place');
-    expect(obj.foo.bar === upd.foo.bar).toBe(false, 'obj.foo.bar should not be updated in place');
-    expect(obj.foo.bar[0] === upd.foo.bar[0]).toBe(true, 'obj.foo.bar items should not be cloned');
-    expect(obj.bak === upd.bak).toBe(true, 'obj.bak should not be cloned');
-    expect(upd.foo.bar[1]).toMatch({ baz: 'baz3' }, 'value under desired name should be updated');
-  });
-
-  it('carefully sets deeply nested item, path collections are not defined', function() {
-    const obj = { bak: { big: 1 } };
-    const upd = updated(obj, 'foo.bar.baz.1', 4);
-
-    expect(obj.bak === upd.bak).toBe(true, 'obj.bak should not be cloned');
-    expect(upd.foo.bar.baz).toMatch([undefined, 4], 'value under desired name should be updated');
-  });
-});
 
 describe('bindState', function() {
   class Page extends Component {
