@@ -1,4 +1,7 @@
 === master
+Migrate from React.PropTypes to prop-types (by @AleksandrZhukov)
+
+Fix flaw in readme code example (by @piton4eg)
 
 More minor code style updates
 
